English Dolibarr ChangeLog

***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: Add "payment due before" field in invoice exports
- New: Add feature to resize or crop image files (for products photos)

For developers:
- More comments in code


***** ChangeLog for 2.8 compared to 2.7 *****

For users:
- New: Support note on trips module
- New: Can link contacts to projects
- New: Can removed attached file on email form if attachment was wrong.
- New: Add option to show your logo on top of left menu.
- New: task #9935: Can edit accountancy code.
- New: Add an option to make users email required.
- New: Module notification can send email on order or proposal validation.
- New: Can use any command line antivirus on file upload.
- New: A customer can also be a prospect.
- New: task #9802 : Can link an action to a project and use project to 
       filter agenda.
- New: Project can be set on contract creation.
- New: Initial sold can be conciliated on bank module.
- New: Add a default errors-to email for emailing module.
- New: Can filter on user on stock movement list.
- New: When creating a third party from a member, it is set as a new
  customer.
- New: Can use {tttt} in numbering mask setup. It will be replaced
  with third party type.
- New: VAT number is stored in one field. This is more "international".
- New: task #9782 : Add possibility to delete a warehouse.
- New: task #9640 : Add label for stock movements.
- New: task #9916 : Add FREE text for interventions card.
- New: Can define the new product ref when cloning.
- New: Project module support status of project and end date.
- New: Provide a debian/ubuntu package.
- New: Add link to check a SIREN for french users.
- New: Add link "now" to fill date when creating invoices.
- Fix: Import module works even if prefix is empty in source file.
- Fix: bug #28055 : Unable to modify the date of a cloned command.
- Fix: bug #27891.
- Fix: Change of numbering module was not effective.