@@ -31,8 +31,8 @@ if (!$user->rights->mailing->lire) accessforbidden();
 // Securite acces client
 if ($user->societe_id > 0)
 {
-  $action = '';
-  $socid = $user->societe_id;
+	$action = '';
+	$socid = $user->societe_id;
 }
 
 $page=$_GET["page"];
@@ -49,6 +49,9 @@ if (! $sortfield) $sortfield="m.date_creat";
 $sall=isset($_GET["sall"])?$_GET["sall"]:$_POST["sall"];
 $sref=isset($_GET["sref"])?$_GET["sref"]:$_POST["sref"];
 
+$filteremail=$_REQUEST["filteremail"]?$_REQUEST["filteremail"]:'';
+
+
 
 /*
  * View
@@ -58,85 +61,133 @@ llxHeader('',$langs->trans("Mailing"),'EN:Module_EMailing|FR:Module_Mailing|ES:M
 
 $html = new Form($db);
 
-$sql = "SELECT m.rowid, m.titre, m.nbemail, m.statut, m.date_creat as datec";
-$sql.= " FROM ".MAIN_DB_PREFIX."mailing as m";
-$sql.= " WHERE m.entity = ".$conf->entity;
-if ($sref) $sql.= " AND m.rowid = '".$sref."'";
-if ($sall) $sql.= " AND (m.titre like '%".$sall."%' OR m.sujet like '%".$sall."%' OR m.body like '%".$sall."%')";
-if (! $sortorder) $sortorder="ASC";
-if (! $sortfield) $sortfield="m.rowid";
-$sql .= " ORDER BY $sortfield $sortorder " . $db->plimit($conf->liste_limit +1, $offset);
-
-$result = $db->query($sql);
-if ($result)
+if ($filteremail)
 {
-  $num = $db->num_rows($result);
-
-  print_barre_liste($langs->trans("ListOfEMailings"), $page, "liste.php","",$sortfield,$sortorder,"",$num);
-
-  $i = 0;
-
-  $addu = "&amp;sall=".$sall;
-  print '<table class="liste">';
-  print '<tr class="liste_titre">';
-  print_liste_field_titre($langs->trans("Ref"),"liste.php","m.rowid",$addu,"","",$sortfield,$sortorder);
-  print_liste_field_titre($langs->trans("Title"),"liste.php","m.titre",$addu,"","",$sortfield,$sortorder);
-  print_liste_field_titre($langs->trans("DateCreation"),"liste.php","m.date_creat",$addu,"",'align="center"',$sortfield,$sortorder);
-  print_liste_field_titre($langs->trans("NbOfEMails"),"liste.php","m.nbemail",$addu,"",'align="center"',$sortfield,$sortorder);
-  print_liste_field_titre($langs->trans("Status"),"liste.php","m.statut",$addu,"",'align="right"',$sortfield,$sortorder);
-  print "</tr>\n";
-
-  print '<form method="get" action="'.$_SERVER["PHP_SELF"].'">';
-  print '<tr class="liste_titre">';
-  print '<td class="liste_titre">';
-  print '<input type="text" class="flat" name="sref" value="'.$sref.'" size="6">';
-  print '</td><td class="liste_titre">';
-  print '<input type="text" class="flat" name="sall" value="'.$sall.'" size="40">';
-  print '</td>';
-  print '<td class="liste_titre">&nbsp;</td>';
-  print '<td class="liste_titre">&nbsp;</td>';
-  print '<td class="liste_titre" align="right"><input class="liste_titre" type="image" src="'.DOL_URL_ROOT.'/theme/'.$conf->theme.'/img/search.png" alt="'.$langs->trans("Search").'">';
-  print "</td>";
-  print "</tr>\n";
-  print '</form>';
-
-  $var=True;
-
-  $email=new Mailing($db);
-
-  while ($i < min($num,$conf->liste_limit))
-    {
-      $obj = $db->fetch_object($result);
-
-      $var=!$var;
-
-      print "<tr $bc[$var]>";
-      print '<td><a href="'.DOL_URL_ROOT.'/comm/mailing/fiche.php?id='.$obj->rowid.'">';
-      print img_object($langs->trans("ShowEMail"),"email").' '.stripslashes($obj->rowid).'</a></td>';
-      print '<td>'.$obj->titre.'</td>';
-      print '<td align="center">'.dol_print_date($obj->datec,'day').'</td>';
-      print '<td align="center">';
-      $nbemail = $obj->nbemail;
-      if (!empty($conf->global->MAILING_LIMIT_SENDBYWEB) && $conf->global->MAILING_LIMIT_SENDBYWEB < $nbemail)
-      {
-      	$text=$langs->trans('LimitSendingEmailing',$conf->global->MAILING_LIMIT_SENDBYWEB);
-		print $html->textwithpicto($nbemail,$text,1,'warning');
-      }
-      else
-      {
-      	print $nbemail;
-      }
-      print '</td>';
-      print '<td align="right">'.$email->LibStatut($obj->statut,5).'</td>';
-      print "</tr>\n";
-      $i++;
-    }
-  print "</table>";
-  $db->free($result);
+	$sql = "SELECT m.rowid, m.titre, m.nbemail, m.statut, m.date_creat as datec, m.date_envoi as date_envoi,";
+	$sql.= " mc.statut as sendstatut";
+	$sql.= " FROM ".MAIN_DB_PREFIX."mailing as m, ".MAIN_DB_PREFIX."mailing_cibles as mc";
+	$sql.= " WHERE m.rowid = mc.fk_mailing AND m.entity = ".$conf->entity;
+	$sql.= " AND mc.email = '".addslashes($filteremail)."'";
+	if ($sref) $sql.= " AND m.rowid = '".$sref."'";
+	if ($sall) $sql.= " AND (m.titre like '%".$sall."%' OR m.sujet like '%".$sall."%' OR m.body like '%".$sall."%')";
+	if (! $sortorder) $sortorder="ASC";
+	if (! $sortfield) $sortfield="m.rowid";
+	$sql .= " ORDER BY $sortfield $sortorder " . $db->plimit($conf->liste_limit +1, $offset);
 }
 else
 {
-  dol_print_error($db);
+	$sql = "SELECT m.rowid, m.titre, m.nbemail, m.statut, m.date_creat as datec, m.date_envoi as date_envoi";
+	$sql.= " FROM ".MAIN_DB_PREFIX."mailing as m";
+	$sql.= " WHERE m.entity = ".$conf->entity;
+	if ($sref) $sql.= " AND m.rowid = '".$sref."'";
+	if ($sall) $sql.= " AND (m.titre like '%".$sall."%' OR m.sujet like '%".$sall."%' OR m.body like '%".$sall."%')";
+	if (! $sortorder) $sortorder="ASC";
+	if (! $sortfield) $sortfield="m.rowid";
+	$sql .= " ORDER BY $sortfield $sortorder " . $db->plimit($conf->liste_limit +1, $offset);
+}
+
+dol_syslog("sql=".$sql);
+//print $sql;
+$result = $db->query($sql);
+if ($result)
+{
+	$num = $db->num_rows($result);
+
+	$title=$langs->trans("ListOfEMailings");
+	if ($filteremail) $title.=' ('.$langs->trans("SentTo",$filteremail).')';
+	print_barre_liste($title, $page, "liste.php","",$sortfield,$sortorder,"",$num);
+
+	$i = 0;
+
+	$param = "&amp;sall=".$sall;
+	if ($filteremail) $param.='&amp;filteremail='.urlencode($filteremail);
+
+	print '<table class="liste">';
+	print '<tr class="liste_titre">';
+	print_liste_field_titre($langs->trans("Ref"),"liste.php","m.rowid",$param,"","",$sortfield,$sortorder);
+	print_liste_field_titre($langs->trans("Title"),"liste.php","m.titre",$param,"","",$sortfield,$sortorder);
+	print_liste_field_titre($langs->trans("DateCreation"),"liste.php","m.date_creat",$param,"",'align="center"',$sortfield,$sortorder);
+	if (! $filteremail) print_liste_field_titre($langs->trans("NbOfEMails"),"liste.php","m.nbemail",$param,"",'align="center"',$sortfield,$sortorder);
+	if (! $filteremail) print_liste_field_titre($langs->trans("DateLastSend"),"liste.php","m.date_envoi",$param,"",'align="center"',$sortfield,$sortorder);
+	else print_liste_field_titre($langs->trans("DateSending"),"liste.php","mc.date_envoi",$param,"",'align="center"',$sortfield,$sortorder);
+	print_liste_field_titre($langs->trans("Status"),"liste.php",($filteremail?"mc.statut":"m.statut"),$param,"",'align="right"',$sortfield,$sortorder);
+	print "</tr>\n";
+
+	print '<form method="get" action="'.$_SERVER["PHP_SELF"].'">';
+	print '<tr class="liste_titre">';
+	print '<td class="liste_titre">';
+	print '<input type="text" class="flat" name="sref" value="'.$sref.'" size="6">';
+	print '</td>';
+	// Title
+	print '<td class="liste_titre">';
+	print '<input type="text" class="flat" name="sall" value="'.$sall.'" size="40">';
+	print '</td>';
+	print '<td class="liste_titre">&nbsp;</td>';
+	if (! $filteremail) print '<td class="liste_titre">&nbsp;</td>';
+	print '<td class="liste_titre">&nbsp;</td>';
+	print '<td class="liste_titre" align="right"><input class="liste_titre" type="image" src="'.DOL_URL_ROOT.'/theme/'.$conf->theme.'/img/search.png" alt="'.$langs->trans("Search").'">';
+	print "</td>";
+	print "</tr>\n";
+	print '</form>';
+
+	$var=True;
+
+	$email=new Mailing($db);
+
+	while ($i < min($num,$conf->liste_limit))
+	{
+		$obj = $db->fetch_object($result);
+
+		$var=!$var;
+
+		print "<tr $bc[$var]>";
+		print '<td><a href="'.DOL_URL_ROOT.'/comm/mailing/fiche.php?id='.$obj->rowid.'">';
+		print img_object($langs->trans("ShowEMail"),"email").' '.stripslashes($obj->rowid).'</a></td>';
+		print '<td>'.$obj->titre.'</td>';
+		// Date creation
+		print '<td align="center">';
+		print dol_print_date($db->jdate($obj->datec),'day');
+		print '</td>';
+		// Nb of email
+		if (! $filteremail)
+		{
+			print '<td align="center">';
+			$nbemail = $obj->nbemail;
+			if (!empty($conf->global->MAILING_LIMIT_SENDBYWEB) && $conf->global->MAILING_LIMIT_SENDBYWEB < $nbemail)
+			{
+				$text=$langs->trans('LimitSendingEmailing',$conf->global->MAILING_LIMIT_SENDBYWEB);
+				print $html->textwithpicto($nbemail,$text,1,'warning');
+			}
+			else
+			{
+				print $nbemail;
+			}
+			print '</td>';
+		}
+		// Last send
+		print '<td align="center" nowrap="nowrap">'.dol_print_date($db->jdate($obj->date_envoi),'day').'</td>';
+		print '</td>';
+		// Status
+		print '<td align="right" nowrap="nowrap">';
+		if ($filteremail)
+		{
+			if ($obj->sendstatut==-1) print $langs->trans("MailingStatusError").' '.img_error();
+			if ($obj->sendstatut==1) print $langs->trans("MailingStatusSent").' '.img_picto($langs->trans("MailingStatusSent"),'statut6');
+		}
+		else
+		{
+			print $email->LibStatut($obj->statut,5);
+		}
+		print '</td>';
+		print "</tr>\n";
+		$i++;
+	}
+	print "</table>";
+	$db->free($result);
+}
+else
+{
+	dol_print_error($db);
 }
 
 $db->close();
