@@ -67,6 +67,8 @@ ConfirmCloneEMailing=Are you sure you want to clone this emailing ?
 CloneContent=Clone message
 CloneReceivers=Cloner recipients
 DateLastSend=Date of last sending
+DateSending=Date sending
+SentTo=Sent to <b>%s</b>
 
 # Libelle des modules de liste de destinataires mailing
 MailingModuleDescContactCompanies=Contacts of all third parties (customer, prospect, supplier, ...)
