@@ -67,6 +67,8 @@ ConfirmCloneEMailing=Etes-vous sur de vouloir cloner cet emailing ?
 CloneContent=Cloner message
 CloneReceivers=Cloner destinataires
 DateLastSend=Date du dernier envoi
+DateSending=Date envoi
+SentTo=Envoyés à <b>%s</b>
 
 # Libelle des modules de liste de destinataires mailing
 MailingModuleDescContactCompanies=Contacts des tiers (prospects, clients, fournisseurs...)
