@@ -5,6 +5,7 @@ English Dolibarr ChangeLog
 For users:
 - New: Add "payment due before" field in invoice exports
 - New: Add feature to resize or crop image files (for products photos)
+- New: task #10113 : Show list of emailing on clicking on "number of mass emailing received"
 
 For developers:
 - More comments in code
